
  New method used to start the cache generation process for the current file.

- eZDBFileHandler - endCacheGeneration

  New method used to start the end generation process for the current file.

- eZDBFileHandler - abortCacheGeneration

  New method used to abort the cache generation process for the current file.

- eZDBFileHandlerMysqlBackend - _exists

  Added a new optional parameter, $ignoreExpiredFiles, defaults to true. If set
  to false, files that exist in the database but are expired by mtime or
  expired fields will be considered as existing.

- eZDBFileHandlerMysqlBackend - _startCacheGeneration

  New method used by the equivalent eZDBFileHandler method.

- eZDBFileHandlerMysqlBackend - _endCacheGeneration

  New method used by the equivalent eZDBFileHandler method.

- eZDBFileHandlerMysqlBackend - _abortCacheGeneration

  New method used by the equivalent eZDBFileHandler method.

Renamed constants
-----------------

===================================================== =======================================
Old constant                                          New constant
===================================================== =======================================
eZURLWildcard::EZURLWILDCARD_REGEXP_ARRAY_CALLBACK    eZURLWildcard::REGEXP_ARRAY_CALLBACK
eZURLWildcard::EZURLWILDCARD_TRANSLATE_CALLBACK       eZURLWildcard::TRANSLATE_CALLBACK
eZURLWildcard::EZURLWILDCARD_CACHED_TRANSLATE         eZURLWildcard::CACHED_TRANSLATE
eZURLWildcard::EZURLWILDCARD_WILDCARDS_PER_CACHE_FILE eZURLWildcard::WILDCARDS_PER_CACHE_FILE
eZURLWildcard::EZ_URLWILDCARD_TYPE_NONE               eZURLWildcard::TYPE_NONE
eZURLWildcard::EZ_URLWILDCARD_TYPE_FORWARD            eZURLWildcard::TYPE_FORWARD
eZURLWildcard::EZ_URLWILDCARD_TYPE_DIRECT             eZURLWildcard::TYPE_DIRECT
eZURLWildcard::EZ_URLWILDCARD_CACHE_SIGNATURE         eZURLWildcard::CACHE_SIGNATURE
===================================================== =======================================