@@ -81,7 +81,7 @@ $OperationList['publish'] = array( 'name' => 'publish',
                                                                                          'required' => true ),
                                                                                   array( 'name' => 'status',
                                                                                          'type' => 'integer',
-                                                                                         'constant' => 1 ) ) ), // eZContentObjectVersion::STATUS_PENDING
+                                                                                         'constant' => eZContentObjectVersion::STATUS_PENDING ) ) ),
                                                     array( 'type' => 'method',
                                                            'name' => 'update-section-id',
                                                            'frequency' => 'once',
@@ -108,7 +108,7 @@ $OperationList['publish'] = array( 'name' => 'publish',
                                                                                          'constant' => false ), // false means current version
                                                                                   array( 'name' => 'status',
                                                                                          'type' => 'integer',
-                                                                                         'constant' => 2 ) ) ), // eZContentObjectVersion::STATUS_ARCHIVED
+                                                                                         'constant' => eZContentObjectVersion::STATUS_ARCHIVED ) ) ),
                                                     array( 'type' => 'loop',
                                                            'name' => 'loop-nodes',
                                                            'method' => 'loopNodeAssignment',
@@ -142,7 +142,7 @@ $OperationList['publish'] = array( 'name' => 'publish',
                                                                                          'required' => true ),
                                                                                   array( 'name' => 'status',
                                                                                          'type' => 'integer',
-                                                                                         'constant' => 3 ) ) ), // eZContentObjectVersion::STATUS_PUBLISHED
+                                                                                         'constant' => eZContentObjectVersion::STATUS_PUBLISHED ) ) ),
                                                     array( 'type' => 'method',
                                                            'name' => 'set-object-published',
                                                            'frequency' => 'once',
